2003-12-18 Craig Franklin <craigfranklin@comcast.net>
  * Changed gpasm classification to beta, gpal to pre-alpha, and all
    others to alpha.
  * Updated gputils manual to include gpal.
  * Added gpal man page.
  * Fixed many gpal bugs.

2003-12-15 Craig Franklin <craigfranklin@comcast.net>
  * Added a new tool called gpal.
  * Added debug-info feature to gpasm, so HLL linenumbers can be inserted
    into COFF outputs.

2003-12-14 Craig Franklin <craigfranklin@comcast.net>
  * Fixed a bug in gpasm 18xx absolute data memory sections that caused the 
    address to be wrong.
  
2003-12-01 Craig Franklin <craigfranklin@comcast.net>
  * Changed gpasm behavior so cblocks are only processed when assembly is
    enabled. 

2003-11-30 Craig Franklin <craigfranklin@comcast.net>
  * Changed gpasm while loops to insert raw text instead of a parsed tree.

2003-11-29 Craig Franklin <craigfranklin@comcast.net>
  * Fixed gpasm bug that prevented some symbols from being substitued with
    macro parameters and #defines.

2003-11-23 Craig Franklin <craigfranklin@comcast.net>
  * Fixed gpasm bug that caused the relocation to be omitted if the macro
    argument is complex.
  * Fixed gpasm bug that could cause symbol offsets in relocations to be
    calculated incorrectly.

2003-11-22 Craig Franklin <craigfranklin@comcast.net>
  * gputils 0.11.8 Released.
  * Added new processors: 16f54, 16f57, 16f688
  * Updated header files and linker scripts.
  * Updated libiberty from upstream sources.
  * Changed gpasm 18xx banksel from movlb relocation to banksel relocation.
  * Changed gplink movlb relocation to use the upper byte of symbol address.

2003-10-21 Craig Franklin <craigfranklin@comcast.net>
  * Fixed string to long conversion in gpasm so 32 bit numbers
    could be used.

2003-10-19 Craig Franklin <craigfranklin@comcast.net>
  * Updated documentation.

2003-10-18 Craig Franklin <craigfranklin@comcast.net>
  * Fixed a bug in 16xx special instruction mnemonics that could cause